# rust-workspace-example

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: cargo-assist.yml  cd.yml  ci.yml  fmt-bot.yml  release-plz.yml  tag.yml  test.yml
crates/marco-test-four/: CHANGELOG.md  Cargo.toml
crates/marco-test-one/: CHANGELOG.md  Cargo.toml
crates/marco-test-one/src/: lib.rs  main.rs
crates/marco-test-three/: CHANGELOG.md  Cargo.toml
crates/marco-test-three/src/: main.rs
crates/marco-test-two/: CHANGELOG.md  Cargo.toml
crates/marco-test-two/src/: lib.rs
crates/one/: CHANGELOG.md  Cargo.toml
crates/two/: CHANGELOG.md  Cargo.toml
cratess/marco-test-three/: CHANGELOG.md
cratess/marco-test-two/src/: lib.rs
subdir/: Cargo.toml
subdir/crates/marco-test-one/: CHANGELOG.md  Cargo.toml
subdir/crates/marco-test-one/src/: lib.rs  main.rs
subdir/crates/marco-test-three/: CHANGELOG.md  Cargo.toml
subdir/crates/marco-test-three/src/: main.rs
subdir/crates/marco-test-two/: CHANGELOG.md  Cargo.toml
subdir/crates/marco-test-two/src/: lib.rs
