[package]
name = "marco-test-three"
version = "0.1.5"
edition = "2021"
description = "marco-test-three"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow = "1.0.68"
tokio = "1"
tonic = "0.8"
lapin = "2"
