[package]
name = "marco-test-three"
version = "0.1.14"
edition = "2021"
description = "marco-test-three"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow = "1.0.75"
tokio = "1"
tonic = "0.9"
lapin = "2"
