[package]
name = "marco-test-two"
version = "0.1.19"
edition = "2021"
description = "just a test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.16"
marco-test-one = {path = "../marco-test-one", version = "0.1.15" }
