[package]
name = "marco-test-two"
version = "0.5.9"
edition = "2021"
description = "just a test for release-plz"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.35"
marco-test-one.workspace = true
